[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/NumberEntry.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/TouchableViewport.gd" type="Script" id=2]
[ext_resource path="res://scripts/NumberEntryWidget.gd" type="Script" id=3]
[ext_resource path="res://scripts/ConnectPadInput.gd" type="Script" id=4]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 1, 4 )

[sub_resource type="ViewportTexture" id=2]
flags = 12
viewport_path = NodePath("Viewport")

[sub_resource type="SpatialMaterial" id=3]
resource_local_to_scene = true
flags_unshaded = true
albedo_texture = SubResource( 2 )

[sub_resource type="BoxShape" id=4]
margin = 0.001
extents = Vector3( 0.5, 0.1, 2 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 64, 256 )
msaa = 6
render_target_v_flip = true
script = ExtResource( 2 )

[node name="NumberEntry" parent="Viewport" instance=ExtResource( 1 )]

[node name="ConnectPadInput" type="StaticBody" parent="."]
script = ExtResource( 4 )

[node name="tl_marker" type="Spatial" parent="ConnectPadInput"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, -2 )

[node name="bl_marker" type="Spatial" parent="ConnectPadInput"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 2 )

[node name="tr_marker" type="Spatial" parent="ConnectPadInput"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, -2 )

[node name="MeshInstance" type="MeshInstance" parent="ConnectPadInput"]
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="ConnectPadInput"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.096831, 0 )
shape = SubResource( 4 )

[connection signal="value_changed" from="Viewport/NumberEntry" to="." method="_on_NumberEntry_value_changed"]
[connection signal="view_changed" from="Viewport/NumberEntry" to="." method="_on_NumberEntry_view_changed"]
[connection signal="interface_release" from="ConnectPadInput" to="Viewport" method="_on_ConnectPadInput_interface_release"]
[connection signal="interface_touch" from="ConnectPadInput" to="Viewport" method="_on_ConnectPadInput_interface_touch"]
